; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/appl/telnet/telnet/extr_telnet.c_slc_mode_import.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/appl/telnet/telnet/extr_telnet.c_slc_mode_import.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SLC_IMPORT = common dso_local global i32 0, align 4
@SLC_RVALUE = common dso_local global i32 0, align 4
@slc_mode = common dso_local global i32 0, align 4
@TELOPT_LINEMODE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @slc_mode_import(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %1
  %6 = load i32, i32* @SLC_IMPORT, align 4
  br label %9

7:                                                ; preds = %1
  %8 = load i32, i32* @SLC_RVALUE, align 4
  br label %9

9:                                                ; preds = %7, %5
  %10 = phi i32 [ %6, %5 ], [ %8, %7 ]
  store i32 %10, i32* @slc_mode, align 4
  %11 = load i32, i32* @TELOPT_LINEMODE, align 4
  %12 = call i64 @my_state_is_will(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %17

14:                                               ; preds = %9
  %15 = load i32, i32* %2, align 4
  %16 = call i32 @slc_import(i32 %15)
  br label %17

17:                                               ; preds = %14, %9
  ret void
}

declare dso_local i64 @my_state_is_will(i32) #1

declare dso_local i32 @slc_import(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
